--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -61,9 +63,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -85,9 +89,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -109,9 +115,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -133,9 +141,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -157,9 +167,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -181,9 +193,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -205,9 +219,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
         <div class="cart-card">
@@ -229,9 +245,11 @@
               <p class="cart-button--p">Add to Cart</p>
             </button>
           </div>
-          <p class="cart--category">Category</p>
-          <p class="cart--name">Name</p>
-          <p class="cart--price">$Price</p>
+          <div class="cart-card-texts">
+            <p class="cart--category">Category</p>
+            <p class="cart--name">Name</p>
+            <p class="cart--price">$Price</p>
+          </div>
         </div>
 
       </div>
