--- a/index.html
+++ b/index.html
@@ -259,55 +259,64 @@
       <div class="cart-order-items">
 
         <div class="cart-order-item">
-          <p class="cart-order--name"></p>
           <div class="cart-item-details">
-            <p class="cart-item--quantity"></p>
-            <p class="cart-item--price">@$</p>
-            <p class="cart-item--total">$</p>
-            <button class="cart-item--close-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
-                <path fill="#CAAFA7"
-                  d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
-              </svg>
-            </button>
+            <p class="cart-order--name">Item Name</p>
+            <div class="cart-item-rates">
+              <p class="cart-item--quantity">4x</p>
+              <p class="cart-item--price">@$5</p>
+              <p class="cart-item--total">$20</p>
+            </div>
           </div>
+
+          <button class="cart-item--close-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
+              <path fill="#CAAFA7"
+                d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
+            </svg>
+          </button>
         </div>
 
         <div class="cart-order-item">
-          <p class="cart-order--name"></p>
           <div class="cart-item-details">
-            <p class="cart-item--quantity"></p>
-            <p class="cart-item--price">@$</p>
-            <p class="cart-item--total">$</p>
-            <button class="cart-item--close-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
-                <path fill="#CAAFA7"
-                  d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
-              </svg>
-            </button>
+            <p class="cart-order--name">Item Name</p>
+            <div class="cart-item-rates">
+              <p class="cart-item--quantity">4x</p>
+              <p class="cart-item--price">@$5</p>
+              <p class="cart-item--total">$20</p>
+            </div>
           </div>
+
+          <button class="cart-item--close-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
+              <path fill="#CAAFA7"
+                d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
+            </svg>
+          </button>
         </div>
 
         <div class="cart-order-item">
-          <p class="cart-order--name"></p>
           <div class="cart-item-details">
-            <p class="cart-item--quantity"></p>
-            <p class="cart-item--price">@$</p>
-            <p class="cart-item--total">$</p>
-            <button class="cart-item--close-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
-                <path fill="#CAAFA7"
-                  d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
-              </svg>
-            </button>
+            <p class="cart-order--name">Item Name</p>
+            <div class="cart-item-rates">
+              <p class="cart-item--quantity">4x</p>
+              <p class="cart-item--price">@$5</p>
+              <p class="cart-item--total">$20</p>
+            </div>
           </div>
+
+          <button class="cart-item--close-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="none" viewBox="0 0 10 10">
+              <path fill="#CAAFA7"
+                d="M8.375 9.375 5 6 1.625 9.375l-1-1L4 5 .625 1.625l1-1L5 4 8.375.625l1 1L6 5l3.375 3.375-1 1Z" />
+            </svg>
+          </button>
         </div>
 
       </div>
 
       <div class="cart-total">
         <p class="cart-total--label">Order Total</p>
-        <p class="cart-total--price">$</p>
+        <p class="cart-total--price">$20</p>
       </div>
       <div class="cart-carbon">
         <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" fill="none" viewBox="0 0 21 20">
