--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./index-0.css">
 
   <title>Frontend Mentor | Product list with cart</title>
 </head>
