snapshot: index-0 - working state.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="./index-0.css">
 
   <title>Frontend Mentor | Product list with cart</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -255,7 +261,7 @@
       </div>
     </div>
     <div class="cart-order">
-      <h2 class="cart-order--h2">Your Cart ()</h2>
+      <h2 class="cart-order--h2">Your Cart (3)</h2>
       <div class="cart-order-items">
 
         <div class="cart-order-item">
